# howsit

./: .gitignore  README.md  pyproject.toml
howsit/: __init__.py  _http.py  cdip.py  ndbc.py  tides.py
tests/: test_cdip.py  test_ndbc.py  test_tides.py
